// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CurrencyText /> should render the Currency Text 1`] = `
.c1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 600;
}

.c2 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
}

.c0 {
  margin-right: 8px;
}

<CurrencyText
  decimalPlace={2}
  flexAlign={false}
  isInline={true}
  prefix="AUD"
  prefixType="body"
  value={1000.499}
  valueType="body"
>
  <styled.span
    flexAlign={false}
    isInline={true}
  >
    <StyledComponent
      flexAlign={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gqjmRU",
            "isStatic": false,
            "lastClassName": "lnRckP",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gqjmRU",
          "target": "span",
          "toString": [Function],
          "usesTheme": false,
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={true}
    >
      <span
        className=""
      >
        <Styled(Text)
          type="body"
          weight={600}
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "Link": [Function],
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-gZMcBi",
                  "isStatic": false,
                  "lastClassName": "c0",
                  "rules": Array [
                    "
  margin-right: 8px;
",
                  ],
                },
                "displayName": "Styled(Text)",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-gZMcBi",
                "target": [Function],
                "toString": [Function],
                "usesTheme": false,
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            type="body"
            weight={600}
          >
            <Text
              className="c0"
              isInline={true}
              tag="span"
              type="body"
              weight={600}
            >
              <styled.span
                as="span"
                className="c0"
                data-component-type="text"
                isInline={true}
                textType="body"
                weight={600}
              >
                <StyledComponent
                  as="span"
                  className="c0"
                  data-component-type="text"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-dnqmqq",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "
",
                        ],
                      },
                      "displayName": "styled.span",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-dnqmqq",
                      "target": "span",
                      "toString": [Function],
                      "usesTheme": false,
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isInline={true}
                  textType="body"
                  weight={600}
                >
                  <span
                    className="c1 c0"
                    data-component-type="text"
                  >
                    AUD
                  </span>
                </StyledComponent>
              </styled.span>
            </Text>
          </StyledComponent>
        </Styled(Text)>
        <Text
          isInline={true}
          tag="span"
          type="body"
        >
          <styled.span
            as="span"
            data-component-type="text"
            isInline={true}
            textType="body"
          >
            <StyledComponent
              as="span"
              data-component-type="text"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-dnqmqq",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "
",
                    ],
                  },
                  "displayName": "styled.span",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-dnqmqq",
                  "target": "span",
                  "toString": [Function],
                  "usesTheme": false,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isInline={true}
              textType="body"
            >
              <span
                className="c2"
                data-component-type="text"
              >
                1,000.50
              </span>
            </StyledComponent>
          </styled.span>
        </Text>
      </span>
    </StyledComponent>
  </styled.span>
</CurrencyText>
`;

exports[`<CurrencyText /> should render the Currency Text not inline 1`] = `
.c2 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 600;
}

.c3 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
}

.c1 {
  margin-right: 8px;
}

.c0 {
  display: block;
}

<CurrencyText
  decimalPlace={2}
  flexAlign={false}
  isInline={false}
  prefix="AUD"
  prefixType="body"
  value={1000.499}
  valueType="body"
>
  <styled.span
    flexAlign={false}
    isInline={false}
  >
    <StyledComponent
      flexAlign={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gqjmRU",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gqjmRU",
          "target": "span",
          "toString": [Function],
          "usesTheme": false,
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={false}
    >
      <span
        className="c0"
      >
        <Styled(Text)
          type="body"
          weight={600}
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "Link": [Function],
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-gZMcBi",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  margin-right: 8px;
",
                  ],
                },
                "displayName": "Styled(Text)",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-gZMcBi",
                "target": [Function],
                "toString": [Function],
                "usesTheme": false,
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            type="body"
            weight={600}
          >
            <Text
              className="c1"
              isInline={true}
              tag="span"
              type="body"
              weight={600}
            >
              <styled.span
                as="span"
                className="c1"
                data-component-type="text"
                isInline={true}
                textType="body"
                weight={600}
              >
                <StyledComponent
                  as="span"
                  className="c1"
                  data-component-type="text"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-dnqmqq",
                        "isStatic": false,
                        "lastClassName": "c3",
                        "rules": Array [
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "
",
                        ],
                      },
                      "displayName": "styled.span",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-dnqmqq",
                      "target": "span",
                      "toString": [Function],
                      "usesTheme": false,
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isInline={true}
                  textType="body"
                  weight={600}
                >
                  <span
                    className="c2 c1"
                    data-component-type="text"
                  >
                    AUD
                  </span>
                </StyledComponent>
              </styled.span>
            </Text>
          </StyledComponent>
        </Styled(Text)>
        <Text
          isInline={true}
          tag="span"
          type="body"
        >
          <styled.span
            as="span"
            data-component-type="text"
            isInline={true}
            textType="body"
          >
            <StyledComponent
              as="span"
              data-component-type="text"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-dnqmqq",
                    "isStatic": false,
                    "lastClassName": "c3",
                    "rules": Array [
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "
",
                    ],
                  },
                  "displayName": "styled.span",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-dnqmqq",
                  "target": "span",
                  "toString": [Function],
                  "usesTheme": false,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isInline={true}
              textType="body"
            >
              <span
                className="c3"
                data-component-type="text"
              >
                1,000.50
              </span>
            </StyledComponent>
          </styled.span>
        </Text>
      </span>
    </StyledComponent>
  </styled.span>
</CurrencyText>
`;

exports[`<CurrencyText /> should render the Currency Text with 0 as value 1`] = `
.c1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 600;
}

.c2 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
}

.c0 {
  margin-right: 8px;
}

<CurrencyText
  decimalPlace={0}
  flexAlign={false}
  isInline={true}
  prefix="AUD"
  prefixType="body"
  value={0}
  valueType="body"
>
  <styled.span
    flexAlign={false}
    isInline={true}
  >
    <StyledComponent
      flexAlign={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gqjmRU",
            "isStatic": false,
            "lastClassName": "lnRckP",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gqjmRU",
          "target": "span",
          "toString": [Function],
          "usesTheme": false,
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={true}
    >
      <span
        className=""
      >
        <Styled(Text)
          type="body"
          weight={600}
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "Link": [Function],
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-gZMcBi",
                  "isStatic": false,
                  "lastClassName": "c0",
                  "rules": Array [
                    "
  margin-right: 8px;
",
                  ],
                },
                "displayName": "Styled(Text)",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-gZMcBi",
                "target": [Function],
                "toString": [Function],
                "usesTheme": false,
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            type="body"
            weight={600}
          >
            <Text
              className="c0"
              isInline={true}
              tag="span"
              type="body"
              weight={600}
            >
              <styled.span
                as="span"
                className="c0"
                data-component-type="text"
                isInline={true}
                textType="body"
                weight={600}
              >
                <StyledComponent
                  as="span"
                  className="c0"
                  data-component-type="text"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-dnqmqq",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "
",
                        ],
                      },
                      "displayName": "styled.span",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-dnqmqq",
                      "target": "span",
                      "toString": [Function],
                      "usesTheme": false,
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isInline={true}
                  textType="body"
                  weight={600}
                >
                  <span
                    className="c1 c0"
                    data-component-type="text"
                  >
                    AUD
                  </span>
                </StyledComponent>
              </styled.span>
            </Text>
          </StyledComponent>
        </Styled(Text)>
        <Text
          isInline={true}
          tag="span"
          type="body"
        >
          <styled.span
            as="span"
            data-component-type="text"
            isInline={true}
            textType="body"
          >
            <StyledComponent
              as="span"
              data-component-type="text"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-dnqmqq",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "
",
                    ],
                  },
                  "displayName": "styled.span",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-dnqmqq",
                  "target": "span",
                  "toString": [Function],
                  "usesTheme": false,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isInline={true}
              textType="body"
            >
              <span
                className="c2"
                data-component-type="text"
              >
                0
              </span>
            </StyledComponent>
          </styled.span>
        </Text>
      </span>
    </StyledComponent>
  </styled.span>
</CurrencyText>
`;

exports[`<CurrencyText /> should render the Currency Text with a center flex align 1`] = `
.c3 {
  font-size: 12px;
  line-height: 18px;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  color: #262D33;
  font-weight: 400;
}

.c2 {
  font-size: 18px;
  line-height: 24px;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  color: #424F5C;
  font-weight: 600;
}

.c1 {
  margin-right: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<CurrencyText
  decimalPlace={0}
  flexAlign={true}
  isInline={true}
  prefix="AUD"
  prefixType="heading"
  value={1000}
  valueType="xsmall"
>
  <styled.span
    flexAlign={true}
    isInline={true}
  >
    <StyledComponent
      flexAlign={true}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gqjmRU",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gqjmRU",
          "target": "span",
          "toString": [Function],
          "usesTheme": false,
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={true}
    >
      <span
        className="c0"
      >
        <Styled(Text)
          type="heading"
          weight={600}
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "Link": [Function],
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-gZMcBi",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  margin-right: 8px;
",
                  ],
                },
                "displayName": "Styled(Text)",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-gZMcBi",
                "target": [Function],
                "toString": [Function],
                "usesTheme": false,
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            type="heading"
            weight={600}
          >
            <Text
              className="c1"
              isInline={true}
              tag="span"
              type="heading"
              weight={600}
            >
              <styled.span
                as="span"
                className="c1"
                data-component-type="text"
                isInline={true}
                textType="heading"
                weight={600}
              >
                <StyledComponent
                  as="span"
                  className="c1"
                  data-component-type="text"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-dnqmqq",
                        "isStatic": false,
                        "lastClassName": "c3",
                        "rules": Array [
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "
",
                        ],
                      },
                      "displayName": "styled.span",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-dnqmqq",
                      "target": "span",
                      "toString": [Function],
                      "usesTheme": false,
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isInline={true}
                  textType="heading"
                  weight={600}
                >
                  <span
                    className="c2 c1"
                    data-component-type="text"
                  >
                    AUD
                  </span>
                </StyledComponent>
              </styled.span>
            </Text>
          </StyledComponent>
        </Styled(Text)>
        <Text
          isInline={true}
          tag="span"
          type="xsmall"
        >
          <styled.span
            as="span"
            data-component-type="text"
            isInline={true}
            textType="xsmall"
          >
            <StyledComponent
              as="span"
              data-component-type="text"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-dnqmqq",
                    "isStatic": false,
                    "lastClassName": "c3",
                    "rules": Array [
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "
",
                    ],
                  },
                  "displayName": "styled.span",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-dnqmqq",
                  "target": "span",
                  "toString": [Function],
                  "usesTheme": false,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isInline={true}
              textType="xsmall"
            >
              <span
                className="c3"
                data-component-type="text"
              >
                1,000
              </span>
            </StyledComponent>
          </styled.span>
        </Text>
      </span>
    </StyledComponent>
  </styled.span>
</CurrencyText>
`;

exports[`<CurrencyText /> should render the Currency Text with a red money color 1`] = `
.c1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 600;
}

.c2 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #FFD2CC;
  font-weight: 400;
}

.c0 {
  margin-right: 8px;
}

<CurrencyText
  decimalPlace={0}
  flexAlign={false}
  isInline={true}
  prefix="AUD"
  prefixType="body"
  value={1000}
  valueColor="#FFD2CC"
  valueType="body"
>
  <styled.span
    flexAlign={false}
    isInline={true}
  >
    <StyledComponent
      flexAlign={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gqjmRU",
            "isStatic": false,
            "lastClassName": "lnRckP",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gqjmRU",
          "target": "span",
          "toString": [Function],
          "usesTheme": false,
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={true}
    >
      <span
        className=""
      >
        <Styled(Text)
          type="body"
          weight={600}
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "Link": [Function],
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-gZMcBi",
                  "isStatic": false,
                  "lastClassName": "c0",
                  "rules": Array [
                    "
  margin-right: 8px;
",
                  ],
                },
                "displayName": "Styled(Text)",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-gZMcBi",
                "target": [Function],
                "toString": [Function],
                "usesTheme": false,
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            type="body"
            weight={600}
          >
            <Text
              className="c0"
              isInline={true}
              tag="span"
              type="body"
              weight={600}
            >
              <styled.span
                as="span"
                className="c0"
                data-component-type="text"
                isInline={true}
                textType="body"
                weight={600}
              >
                <StyledComponent
                  as="span"
                  className="c0"
                  data-component-type="text"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-dnqmqq",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "
",
                        ],
                      },
                      "displayName": "styled.span",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-dnqmqq",
                      "target": "span",
                      "toString": [Function],
                      "usesTheme": false,
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isInline={true}
                  textType="body"
                  weight={600}
                >
                  <span
                    className="c1 c0"
                    data-component-type="text"
                  >
                    AUD
                  </span>
                </StyledComponent>
              </styled.span>
            </Text>
          </StyledComponent>
        </Styled(Text)>
        <Text
          color="#FFD2CC"
          isInline={true}
          tag="span"
          type="body"
        >
          <styled.span
            as="span"
            color="#FFD2CC"
            data-component-type="text"
            isInline={true}
            textType="body"
          >
            <StyledComponent
              as="span"
              color="#FFD2CC"
              data-component-type="text"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-dnqmqq",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "
",
                    ],
                  },
                  "displayName": "styled.span",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-dnqmqq",
                  "target": "span",
                  "toString": [Function],
                  "usesTheme": false,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isInline={true}
              textType="body"
            >
              <span
                className="c2"
                color="#FFD2CC"
                data-component-type="text"
              >
                1,000
              </span>
            </StyledComponent>
          </styled.span>
        </Text>
      </span>
    </StyledComponent>
  </styled.span>
</CurrencyText>
`;

exports[`<CurrencyText /> should render the Currency Text with a red prefix color 1`] = `
.c2 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
}

.c1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #FFD2CC;
  font-weight: 600;
}

.c0 {
  margin-right: 8px;
}

<CurrencyText
  decimalPlace={0}
  flexAlign={false}
  isInline={true}
  prefix="AUD"
  prefixColor="#FFD2CC"
  prefixType="body"
  value={1000}
  valueType="body"
>
  <styled.span
    flexAlign={false}
    isInline={true}
  >
    <StyledComponent
      flexAlign={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gqjmRU",
            "isStatic": false,
            "lastClassName": "lnRckP",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gqjmRU",
          "target": "span",
          "toString": [Function],
          "usesTheme": false,
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={true}
    >
      <span
        className=""
      >
        <Styled(Text)
          color="#FFD2CC"
          type="body"
          weight={600}
        >
          <StyledComponent
            color="#FFD2CC"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "Link": [Function],
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-gZMcBi",
                  "isStatic": false,
                  "lastClassName": "c0",
                  "rules": Array [
                    "
  margin-right: 8px;
",
                  ],
                },
                "displayName": "Styled(Text)",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-gZMcBi",
                "target": [Function],
                "toString": [Function],
                "usesTheme": false,
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            type="body"
            weight={600}
          >
            <Text
              className="c0"
              color="#FFD2CC"
              isInline={true}
              tag="span"
              type="body"
              weight={600}
            >
              <styled.span
                as="span"
                className="c0"
                color="#FFD2CC"
                data-component-type="text"
                isInline={true}
                textType="body"
                weight={600}
              >
                <StyledComponent
                  as="span"
                  className="c0"
                  color="#FFD2CC"
                  data-component-type="text"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-dnqmqq",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "
",
                        ],
                      },
                      "displayName": "styled.span",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-dnqmqq",
                      "target": "span",
                      "toString": [Function],
                      "usesTheme": false,
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isInline={true}
                  textType="body"
                  weight={600}
                >
                  <span
                    className="c1 c0"
                    color="#FFD2CC"
                    data-component-type="text"
                  >
                    AUD
                  </span>
                </StyledComponent>
              </styled.span>
            </Text>
          </StyledComponent>
        </Styled(Text)>
        <Text
          isInline={true}
          tag="span"
          type="body"
        >
          <styled.span
            as="span"
            data-component-type="text"
            isInline={true}
            textType="body"
          >
            <StyledComponent
              as="span"
              data-component-type="text"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-dnqmqq",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "
",
                    ],
                  },
                  "displayName": "styled.span",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-dnqmqq",
                  "target": "span",
                  "toString": [Function],
                  "usesTheme": false,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isInline={true}
              textType="body"
            >
              <span
                className="c2"
                data-component-type="text"
              >
                1,000
              </span>
            </StyledComponent>
          </styled.span>
        </Text>
      </span>
    </StyledComponent>
  </styled.span>
</CurrencyText>
`;

exports[`<CurrencyText /> should render the Currency Text with an extra small money style 1`] = `
.c1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 600;
}

.c2 {
  font-size: 12px;
  line-height: 18px;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  color: #262D33;
  font-weight: 400;
}

.c0 {
  margin-right: 8px;
}

<CurrencyText
  decimalPlace={0}
  flexAlign={false}
  isInline={true}
  prefix="AUD"
  prefixType="body"
  value={1000}
  valueType="xsmall"
>
  <styled.span
    flexAlign={false}
    isInline={true}
  >
    <StyledComponent
      flexAlign={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gqjmRU",
            "isStatic": false,
            "lastClassName": "lnRckP",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gqjmRU",
          "target": "span",
          "toString": [Function],
          "usesTheme": false,
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={true}
    >
      <span
        className=""
      >
        <Styled(Text)
          type="body"
          weight={600}
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "Link": [Function],
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-gZMcBi",
                  "isStatic": false,
                  "lastClassName": "c0",
                  "rules": Array [
                    "
  margin-right: 8px;
",
                  ],
                },
                "displayName": "Styled(Text)",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-gZMcBi",
                "target": [Function],
                "toString": [Function],
                "usesTheme": false,
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            type="body"
            weight={600}
          >
            <Text
              className="c0"
              isInline={true}
              tag="span"
              type="body"
              weight={600}
            >
              <styled.span
                as="span"
                className="c0"
                data-component-type="text"
                isInline={true}
                textType="body"
                weight={600}
              >
                <StyledComponent
                  as="span"
                  className="c0"
                  data-component-type="text"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-dnqmqq",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "
",
                        ],
                      },
                      "displayName": "styled.span",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-dnqmqq",
                      "target": "span",
                      "toString": [Function],
                      "usesTheme": false,
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isInline={true}
                  textType="body"
                  weight={600}
                >
                  <span
                    className="c1 c0"
                    data-component-type="text"
                  >
                    AUD
                  </span>
                </StyledComponent>
              </styled.span>
            </Text>
          </StyledComponent>
        </Styled(Text)>
        <Text
          isInline={true}
          tag="span"
          type="xsmall"
        >
          <styled.span
            as="span"
            data-component-type="text"
            isInline={true}
            textType="xsmall"
          >
            <StyledComponent
              as="span"
              data-component-type="text"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-dnqmqq",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "
",
                    ],
                  },
                  "displayName": "styled.span",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-dnqmqq",
                  "target": "span",
                  "toString": [Function],
                  "usesTheme": false,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isInline={true}
              textType="xsmall"
            >
              <span
                className="c2"
                data-component-type="text"
              >
                1,000
              </span>
            </StyledComponent>
          </styled.span>
        </Text>
      </span>
    </StyledComponent>
  </styled.span>
</CurrencyText>
`;

exports[`<CurrencyText /> should render the Currency Text with an extra small prefix style 1`] = `
.c2 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
}

.c1 {
  font-size: 12px;
  line-height: 18px;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  color: #262D33;
  font-weight: 600;
}

.c0 {
  margin-right: 8px;
}

<CurrencyText
  decimalPlace={0}
  flexAlign={false}
  isInline={true}
  prefix="AUD"
  prefixType="xsmall"
  value={1000}
  valueType="body"
>
  <styled.span
    flexAlign={false}
    isInline={true}
  >
    <StyledComponent
      flexAlign={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gqjmRU",
            "isStatic": false,
            "lastClassName": "lnRckP",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gqjmRU",
          "target": "span",
          "toString": [Function],
          "usesTheme": false,
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={true}
    >
      <span
        className=""
      >
        <Styled(Text)
          type="xsmall"
          weight={600}
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "Link": [Function],
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-gZMcBi",
                  "isStatic": false,
                  "lastClassName": "c0",
                  "rules": Array [
                    "
  margin-right: 8px;
",
                  ],
                },
                "displayName": "Styled(Text)",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-gZMcBi",
                "target": [Function],
                "toString": [Function],
                "usesTheme": false,
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            type="xsmall"
            weight={600}
          >
            <Text
              className="c0"
              isInline={true}
              tag="span"
              type="xsmall"
              weight={600}
            >
              <styled.span
                as="span"
                className="c0"
                data-component-type="text"
                isInline={true}
                textType="xsmall"
                weight={600}
              >
                <StyledComponent
                  as="span"
                  className="c0"
                  data-component-type="text"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-dnqmqq",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "

  ",
                          [Function],
                          "
",
                        ],
                      },
                      "displayName": "styled.span",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-dnqmqq",
                      "target": "span",
                      "toString": [Function],
                      "usesTheme": false,
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isInline={true}
                  textType="xsmall"
                  weight={600}
                >
                  <span
                    className="c1 c0"
                    data-component-type="text"
                  >
                    AUD
                  </span>
                </StyledComponent>
              </styled.span>
            </Text>
          </StyledComponent>
        </Styled(Text)>
        <Text
          isInline={true}
          tag="span"
          type="body"
        >
          <styled.span
            as="span"
            data-component-type="text"
            isInline={true}
            textType="body"
          >
            <StyledComponent
              as="span"
              data-component-type="text"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-dnqmqq",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "

  ",
                      [Function],
                      "
",
                    ],
                  },
                  "displayName": "styled.span",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-dnqmqq",
                  "target": "span",
                  "toString": [Function],
                  "usesTheme": false,
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              isInline={true}
              textType="body"
            >
              <span
                className="c2"
                data-component-type="text"
              >
                1,000
              </span>
            </StyledComponent>
          </styled.span>
        </Text>
      </span>
    </StyledComponent>
  </styled.span>
</CurrencyText>
`;

exports[`<CurrencyText /> should render the Currency Text without value 1`] = `
<CurrencyText
  decimalPlace={0}
  flexAlign={false}
  isInline={true}
  prefixType="body"
  valueType="body"
>
  -
</CurrencyText>
`;
